--- a/yamls/Openshift/Secrets/git-secret.yaml
+++ b/yamls/Openshift/Secrets/git-secret.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: git-secret
   annotations:
-    tekton.dev/git-0: https://dev.azure.com/grahasti/POC-cloud-native/_git/grahasti-openshift-resources.git
+    tekton.dev/git-0: https://dev.azure.com/grahasti/POC-cloud-native/_git/grahasti-openshift-resources
 type: kubernetes.io/basic-auth
 stringData:
   username: vishnoi.abhishek
