--- a/yamls/Openshift/Deployments/login-microservice.yaml
+++ b/yamls/Openshift/Deployments/login-microservice.yaml
@@ -15,7 +15,7 @@ spec:
         app: login-microservice
     spec:
       containers:
-      - image: image-registry.openshift-image-registry.svc:5000/grahasti/login-microservice-is:03
+      - image: image-registry.openshift-image-registry.svc:5000/grahasti/login-microservice-is:xxxxx
         imagePullPolicy: Always
         name: login-microservice
         ports:
