update the changes for lotp namespace

--- a/yamls/Tekton/TriggerTemplate/account-microservice-trigger-template.yaml
+++ b/yamls/Tekton/TriggerTemplate/account-microservice-trigger-template.yaml
@@ -16,7 +16,7 @@ spec:
       generateName: account-microservice-pipeline-$(tt.params.git-pushid)-
       labels:
         tekton.dev/pipeline: account-microservice-pipeline
-      namespace: grahasti
+      namespace: lotp
     spec:
       serviceAccountName: pipeline-run-sa
       params:
