--- a/yamls/Openshift/ConfigMaps/login-microservice-config.yaml
+++ b/yamls/Openshift/ConfigMaps/login-microservice-config.yaml
@@ -2,9 +2,9 @@ kind: ConfigMap
 apiVersion: v1
 metadata:
   name: login-microservice-config
-  namespace: grahasti
+  namespace: lotp
 data:
   application.properties: |
     server.ssl.enabled=false
-    url.user.microservice.getUsers=http://users-microservice-svc.grahasti.svc.cluster.local:8080/api/getUsers
-    url.user.microservice.addUser=http://users-microservice-svc.grahasti.svc.cluster.local:8080/api/getUsers
+    url.user.microservice.getUsers=http://users-microservice-svc.lotp.svc.cluster.local:8080/api/getUsers
+    url.user.microservice.addUser=http://users-microservice-svc.lotp.svc.cluster.local:8080/api/getUsers
