update the changes for lotp namespace

--- a/yamls/Openshift/Secrets/git-secret.yaml
+++ b/yamls/Openshift/Secrets/git-secret.yaml
@@ -3,8 +3,8 @@ kind: Secret
 metadata:
   name: git-secret
   annotations:
-    tekton.dev/git-0: https://dev.azure.com/grahasti/POC-cloud-native/_git/grahasti-openshift-resources
+    tekton.dev/git-0: https://github.com/Lord-of-the-Pods/lotp-cicd.git
 type: kubernetes.io/basic-auth
 stringData:
-  username: vishnoi.abhishek
-  password: p7mikklaqhujdbabehium2hg7fawdsh4zr3ty44ctaov62gurcdq
+  username: abhishekvishnoi
+  password: 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
