--- a/yamls/Tekton/Pipeline/ui-microservice-pipeline.yaml
+++ b/yamls/Tekton/Pipeline/ui-microservice-pipeline.yaml
@@ -11,7 +11,7 @@ spec:
   - name: git-clone
     params:
     - name: url
-      value: https://dev.azure.com/lotp/POC-cloud-native/_git/ui-microservice
+      value: https://github.com/Lord-of-the-Pods/ui-microservice.git
     - name: submodules
       value: "true"
     - name: depth
