--- a/yamls/dashboard/kubernetes-dashboard.yaml
+++ b/yamls/dashboard/kubernetes-dashboard.yaml
@@ -8,10 +8,6 @@ spec:
     - host: kub-dashboard.com
       http:
         paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: kubernetes-dashboard
-                port:
-                  number: 80
+          - backend:
+              serviceName: kubernetes-dashboard
+              servicePort: 80
