--- a/yamls/minikube/namespace/lotr-namespace.yaml
+++ b/yamls/minikube/namespace/lotr-namespace.yaml
@@ -2,5 +2,5 @@ apiVersion: v1
 kind: Namespace
 metadata:
   labels:
-    app.kubernetes.io/instance: lotr-app
-  name: lotr
+    app.kubernetes.io/instance: lotp-app
+  name: lotp
