--- a/yamls/Tekton/Pipeline/account-microservice-pipeline.yaml
+++ b/yamls/Tekton/Pipeline/account-microservice-pipeline.yaml
@@ -41,7 +41,7 @@ spec:
   - name: buildah
     params:
     - name: IMAGE
-      value: image-registry.openshift-image-registry.svc:5000/lotp/account-microservice-is
+      value: docker.io/abhishekkvvishnoi/lotp-account-microservice
     - name: STORAGE_DRIVER
       value: vfs
     - name: DOCKERFILE
