--- a/yamls/Tekton/Pipeline/account-microservice-pipeline.yaml
+++ b/yamls/Tekton/Pipeline/account-microservice-pipeline.yaml
@@ -87,7 +87,7 @@ spec:
     - name: deployment
       value: account-microservice
     - name: IMAGE
-      value: image-registry.openshift-image-registry.svc:5000/lotp/account-microservice-is:$(params.git-pushid)
+      value: docker.io/abhishekkvvishnoi/lotp-account-microservice:$(params.git-pushid)
     runAfter:
     - buildah-tag
     taskRef:
