--- a/yamls/Tekton/Secrets/git-secret.yaml
+++ b/yamls/Tekton/Secrets/git-secret.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: git-secret
   annotations:
-    tekton.dev/git-0: https://github.com/Lord-of-the-Pods/lotp-cicd.git
+    tekton.dev/git-0: https://github.com
 type: kubernetes.io/basic-auth
 stringData:
   username: abhishekvishnoi
