--- a/yamls/minikube/Deployments/users-microservice.yaml
+++ b/yamls/minikube/Deployments/users-microservice.yaml
@@ -15,7 +15,7 @@ spec:
         app: users-microservice
     spec:
       containers:
-      - image: image-registry.openshift-image-registry.svc:5000/lotp/users-microservice-is:002
+      - image: docker.io/abhishekkvvishnoi/lotp-users-microservice:002
         imagePullPolicy: Always
         name: users-microservice
         ports:
